update info page

--- a/SetuPaTimer/app/src/main/res/values/strings.xml
+++ b/SetuPaTimer/app/src/main/res/values/strings.xml
@@ -10,5 +10,11 @@
   <string name="bottom_bar_button_info">Инфо</string>
   
   <string name="no_choosen_joke">Ткни на шутёху</string>
+  <string name="info_text_0">Приложение, которое хранит в себе около 60 плохих шуток (18+)</string>
+  <string name="info_text_1">Выбирая шутку в верху экрана появлется полный текст и две кнопки : Узнать продолжение и Добавить в Любимые</string>
+  <string name="info_text_2">Продолжение шутейки вылетает внизу экрана на короткое время</string>
+  <string name="info_text_3">Приложение с открытм исходным кодом, работает без интернета, никуда не отправляет ваши данные</string>
+  <string name="info_text_4">Исходный код :</string>
+  <string name="info_text_5">Контакты разработчика :</string>
 
 </resources>
